Fix alignment issue on final sales

--- a/gilt.css
+++ b/gilt.css
@@ -9,10 +9,6 @@
   width: auto !important;
 }
 
-#catalog.final {
-  margin-left: 300px !important;
-}
-
 #nav_container {
   height: 20px !important;
   margin-left:-25px !important;
